--- a/CFMMCD/Views/Account/CreateAccount.cshtml
+++ b/CFMMCD/Views/Account/CreateAccount.cshtml
@@ -13,7 +13,7 @@
         }
     }
     @using (Html.BeginForm())
-    { 
+    {
         @Html.AntiForgeryToken()
         <div class="form-group">
             @Html.TextBoxFor(m => m.Username, new { @class = "form-control", @placeholder = "Username" })
@@ -28,7 +28,7 @@
             @Html.ValidationMessageFor(m => m.PasswordVerify, "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
-            @Html.ValidationSummary(true, "", new { @class = "text-danger"})
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
             <div contentEditable="false" style="height:200px; overflow-y:scroll">
@@ -59,13 +59,13 @@
                 <div class="checkbox">
                     <label>
                         @Html.CheckBoxFor(m => m.SCMInput)
-                        SCM Vendor Recipe Page
+                        SCM Master Recipe Page
                     </label>
                 </div>
                 <div class="checkbox">
                     <label>
                         @Html.CheckBoxFor(m => m.VEMInput)
-                        Vendor Page
+                        Vendor Master Page
                     </label>
                 </div>
                 <div class="checkbox">
