added report generation view

--- a/CFMMCD/Views/Home/Index.cshtml
+++ b/CFMMCD/Views/Home/Index.cshtml
@@ -80,7 +80,7 @@
                                 }
                                 if (UASession.REG)
                                 {
-                                    <li class="list-group-item">@Html.ActionLink("Report generation (UD)", "Index", "Home")</li>
+                                    <li class="list-group-item">@Html.ActionLink("Report generation (UD)", "Index", "ReportGeneration")</li>
                                 }
 
                                 <li class="list-group-item">
