--- a/CFMMCD/Views/ProfitCenter/Index.cshtml
+++ b/CFMMCD/Views/ProfitCenter/Index.cshtml
@@ -7,7 +7,17 @@
 }
 
 <h2 align="center">@ViewBag.Title</h2>
-
+<!--Alerts-->
+<div class="container">
+    @if (TempData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger alert-dismissable fade in">@TempData["ErrorMessage"]<button class="close" data-dismiss="alert" aria-label="close">&times;</button></div>
+    }
+    @if (TempData["SuccessMessage"] != null)
+    {
+        <div class="alert alert-success alert-dismissable fade in">@TempData["SuccessMessage"]<button class="close" data-dismiss="alert" aria-label="close">&times;</button></div>
+    }
+</div>
 <div class="form-horizontal">
     @using (Html.BeginForm("UpdateDelete", "ProfitCenter", FormMethod.Post, new { }))
     {
@@ -15,16 +25,12 @@
             <div class="form-group">
                 <div class="row" style="margin-top: 70px;">
                     <div class="col-lg-10 col-lg-offset-1">
-                        <div class="col-lg-1">
+                        <div class="col-lg-4">
                             @Html.LabelFor(m => m.Id, "Id", new { @class = "control-label", @type = "number" })
-                        </div>
-                        <div class="col-lg-3">
                             @Html.TextBoxFor(m => m.Id, new { @class = "form-control input-sm", @Value = Model.Id, @maxlength = "6" })
                         </div>
-                        <div class="col-lg-2" style="margin-left: 40px;">
+                        <div class="col-lg-8">
                             @Html.LabelFor(m => m.PRFCNT, "ProfitCenter", new { @class = "control-label" })
-                        </div>
-                        <div class="col-lg-5" style="margin-left: -40px;">
                             @Html.TextBoxFor(m => m.PRFCNT, new { @class = "form-control input-sm", @Value = Model.PRFCNT, @maxlength = "1" })
                         </div>
                     </div>
@@ -43,30 +49,42 @@
                         @{
                             if (PRCList != null)
                             {
-                                foreach (ProfitCenterViewModel prc in PRCList)
+                                // for each BreakPTList declared in ViewModel
+                                foreach (ProfitCenterViewModel prc in Model.PCList)
                                 {
-                                    <tr>
+                                    <tr class="tr-element">
                                         <td></td>
-                                        <td>@prc.Id</td>
-                                        <td>@prc.PRFCNT</td>
+                                        <td class="td-id">@prc.Id</td>
+                                        <td class="td-name">@prc.PRFCNT</td>
                                     </tr>
                                 }
                             }
-
                             else
                             {
-                                <text>No Inputs</text>
+                                <tr class="text-danger">No data available</tr>
                             }
                         }
 
                     </tbody>
                 </table>
-                <div class="right-fixed" align="center">
-                    <button type="button" class="btn btn-default" name="command" value="Save">Save</button>
-                    <button type="button" class="btn btn-default" name="command" value="Update">Update</button>
-                    <button type="button" class="btn btn-default" name="command" value="Delete">Delete</button>
+                <!--Right aligned button group-->
+                <div class="right-fixed" align="right">
+                    <button type="submit" class="btn btn-default" name="command" value="Save">Save</button>
+                    <button type="submit" class="btn btn-default" name="command" value="Delete">Delete</button>
                 </div>
             </div>
         </div>
                             }
 </div>
+
+<script>
+    // Row selection script
+    $(window).ready(function () {
+        $(".tr-element").click(function (e) {
+            var id = $(this).children(".td-id").text();
+            var name = $(this).children(".td-name").text();
+            $("#Id").val(id);
+            $("#PRFCNT").val(name);
+        });
+    });
+</script>
