Fixed Menu recipe functionalities

--- a/CFMMCD/Views/Home/Index.cshtml
+++ b/CFMMCD/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                                 }
                                 if (UASession.MER)
                                 {
-                                    <li class="list-group-item">@Html.ActionLink("Menu Recipe (UD)", "Index", "Home")</li>
+                                    <li class="list-group-item">@Html.ActionLink("Menu Recipe", "Index", "MenuRecipe")</li>
                                 }
                                 if (UASession.STP)
                                 {
