--- a/CFMMCD/Views/MenuRecipe/Index.cshtml
+++ b/CFMMCD/Views/MenuRecipe/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CFMMCD.Models.ViewModel.MenuRecipeViewModel
 @using CFMMCD.Models.ViewModel
 
-@{
+@{  int i = 0;
     int HasSearch = 0;
     if (TempData["SearchResult"] != null)
     {
@@ -11,7 +11,8 @@
 }
 
 
-<h2>@ViewBag.Title</h2>
+<h2 align="center">@ViewBag.Title</h2>
+<hr />
 <!--Alerts-->
 <div class="container">
     @if (TempData["ErrorMessage"] != null)
@@ -26,15 +27,15 @@
 <!--Main content starts here-->
 <div class="form-horizontal">
 
-    <div class="col-lg-12">
+    <div class="form-horizontal">
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
             <div class="container-fluid">
-                <div class="col-lg-2 label-container-left">
+                <div class="col-lg-2 col-lg-offset-2">
                     <label class="form-label" for="menu-item">Menu item/ Product name</label>
                 </div>
-                <div class="col-lg-7">
+                <div class="col-lg-5">
                     @Html.TextBoxFor(m => m.SearchItem, new { @class = "form-control" })
                     <div class="input-group float-right" style="padding-top:8px">
                         <label class="checkbox-inline form-label">
@@ -52,28 +53,29 @@
 
     <hr />
 
-    <div class="col-lg-12">
+    <div class="form-horizontal">
         @using (Html.BeginForm("UpdateDelete", "MenuRecipe", FormMethod.Post, new { }))
         {
             <div class="container-fluid">
-                <div class="col-lg-6">
-                    <div class="form-group">
+                <div class="col-lg-3 col-lg-offset-3">
+                    <div class="col-lg-12">
                         @Html.LabelFor(m => Model.RIRMIC, "Menu item code", new { @class = "form-label" })
-                        @Html.DisplayFor(m => Model.RIRMIC, new { @class = "form-control" } )
+                        @Html.TextBoxFor(m => Model.RIRMIC, new { @class = "form-control" })
+
                     </div>
                 </div>
 
-                <div class="col-lg-6">
-                    <div class="form-group">
+                <div class="col-lg-3">
+                    <div class="col-lg-12">
                         @Html.LabelFor(m => Model.MIMLON, "Menu item long name", new { @class = "form-label" })
-                        @Html.DisplayFor(m => Model.MIMLON, new { @class = "form-control" })
+                        @Html.TextBoxFor(m => Model.MIMLON, new { @class = "form-control" })
                     </div>
                 </div>
 
-                <div class="col-lg-12">
-                    <div class="form-group">
+                <div class="col-lg-6 col-lg-offset-3">
+                    <div class="col-lg-12">
                         @Html.LabelFor(m => Model.MIMDSC, "Description", new { @class = "form-label" })
-                        @Html.DisplayFor(m => Model.MIMDSC, new { @class = "form-control" })
+                        @Html.TextBoxFor(m => Model.MIMDSC, new { @class = "form-control" })
                     </div>
                 </div>
             </div>
@@ -95,33 +97,44 @@
                     </thead>
                     <tbody>
                         @{
-                            if (Model.RecipeList != null || Model.RecipeList.Count() != 0)
+                            if (Model.MenuRecipeList != null || Model.MenuRecipeList.Count() <= 1)
                             {
-                                for (int i = 0; i < Model.RecipeList.Count(); i++)
+                                for (i = 0; i < Model.MenuRecipeList.Count(); i++)
                                 {
+                                    <!--Generated rows-->
                                     <tr>
+                                        @Html.HiddenFor(m => Model.MenuRecipeList[i].RIRRID)
                                         <td></td>
-                                        <td>
-                                            <div class="input-group">
-                                                @Html.TextBoxFor(m => Model.RecipeList[i].RIRRIC, new { @class = "form - control input-sm" })
-                                                <div class="input-group-btn"><button class="btn btn-default"><span class="glyphicon-search"></span></button></div>
-                                            </div>
-                                        </td>
-                                        <td> @Html.DisplayFor(m => Model.RecipeList[i].RIMRID, new { @class = "form-control input-sm" }) </td>
-                                        <td> @Html.TextBoxFor(m => Model.RecipeList[i].RIRSFQ, new { @class = "form-control input-sm" }) </td>
-                                        <td> @Html.TextBoxFor(m => Model.RecipeList[i].RIRMIC, new { @class = "form-control input-sm" }) </td>
-                                        <td> @Html.DropDownListFor(m => Model.RecipeList[i].RIRMIC, new SelectList(new List<string>()), new { @class = "form-control" }) </td>
-                                        <td> @Html.DropDownListFor(m => Model.RecipeList[i].RIRCWC, new SelectList(new List<Object>() {
+                                        <td> @Html.TextBoxFor(m => Model.MenuRecipeList[i].RIRRIC, new { @class = "form-control input-sm" }) </td>
+                                        <td> @Html.DisplayFor(m => Model.MenuRecipeList[i].RIMRID, new { @class = "form-control input-sm" }) </td>
+                                        <td> @Html.TextBoxFor(m => Model.MenuRecipeList[i].RIRSFQ, new { @class = "form-control input-sm" }) </td>
+                                        <td> @Html.TextBoxFor(m => Model.MenuRecipeList[i].RIMCPR, new { @class = "form-control input-sm" }) </td>
+                                        <td> @Html.DropDownListFor(m => Model.MenuRecipeList[i].RIRCWC, new SelectList(new List<Object>() {
                                             new { value = "0" , text = "Active"  },
-                                            new { value = "1" , text = "Inactive" }}, new { @class = "form-control input-sm" }))
+                                            new { value = "1" , text = "Inactive" } }, "value", "text"), new { @class = "form-control input-sm" })
                                         </td>
-                                        <td>@Html.DisplayFor(m => Model.RecipeList[i].STOATT, new { @class = "form-control input-sm" })</td>
+                                        <td>@Html.DisplayFor(m => Model.MenuRecipeList[i].STOATT, new { @class = "form-control input-sm" })</td>
                                     </tr>
                                 }
                             }
+                            <!--Empty row-->
+                            <tr>
+                                <td></td>
+                                <td>@Html.TextBoxFor(m => m.RIRRIC[0], new { @class = "form-control input-sm" })</td>
+                                <td> @Html.DisplayFor(m => m.RIMRID[0], new { @class = "form-control input-sm" }) </td>
+                                <td> @Html.TextBoxFor(m => m.RIRSFQ[0], new { @class = "form-control input-sm" }) </td>
+                                <td> @Html.TextBoxFor(m => m.RIMCPR[0], new { @class = "form-control input-sm" }) </td>
+                                <td>
+                                    @Html.DropDownListFor(m => m.RIRCWC[0], new SelectList( new List<Object>() {
+                                            new { value = "0" , text = "Active"  },
+                                            new { value = "1" , text = "Inactive" } }, "value", "text"), new { @class = "form-control input-sm" })
+                                </td>
+                                <td>@Html.DisplayFor(m => m.STOATT[0], new { @class = "form-control input-sm" })</td>
+                            </tr>
+                            <!--Add new row-->
                             <tr id="add-row">
                                 <td></td>
-                                <td colspan="6"><button class="btn btn-default btn-sm">Add raw item</button></td>
+                                <td colspan="6"><button class="btn btn-default btn-sm btn-blk">Add new raw item</button></td>
                             </tr>
                         }
                     </tbody>
@@ -131,7 +144,7 @@
             <div class="form-inline bottom float" style="right:50px">
                 <button type="submit" name="command" value="Save" class="btn btn-default">Save</button>
             </div>
-                            }
+        }
     </div>
 </div>
 
@@ -144,20 +157,20 @@
         </div>
         @using (Html.BeginForm("DisplaySearchResult", "MenuRecipe", FormMethod.Post, new { }))
         {
-            List<MenuItemMasterViewModel> MIMList = (List<MenuItemMasterViewModel>)Session["ViewModelList"];
-            if (MIMList != null)
+            List<MenuItem> MIList = (List<MenuItem>)Session["ViewModelList"];
+            if (MIList != null)
             {
                 <div class="modal-body">
-                    @{if (HasSearch == 1 && MIMList != null)
+                    @{if (HasSearch == 1 && MIList != null)
                     {
-                        foreach (MenuItemMasterViewModel vm in MIMList)
+                        foreach (MenuItem vm in MIList)
                         {
-                                <button type="submit" class="modal-item-select" name="value" value=@vm.MIMMIC>
+                                <button type="submit" class="modal-item-select" name="value" value=@vm.RIRMIC>
                                     <div class="col-lg-3">
-                                        @vm.MIMMIC
+                                        @vm.RIRMIC
                                     </div>
                                     <div class="col-lg-9">
-                                        @vm.MIMNAM
+                                        @vm.MIMDSC
                                     </div>
                                 </button>
                             }
